# sm-2009-research-data-analysis

./: .gitignore  README.md  pyproject.toml  setup.cfg  tasks.py  trial-importer.ipynb
src/: data-probing.ipynb  extract-trials-single.ipynb  helpers.py  processor-testing.ipynb  trial-importer.ipynb
src/lib/: exclusion_manager.py  processors.py  structures.py  utils.py  writer.py
src/lib/data_processors/: __init__.py  _base.py  _channel_remapper.py
src/tests/: test_exclusion_manager.py  test_structures.py
src/tests/dataprocessors/: test channel_remapper.py
