[tool.poetry]
name = "extracter"
version = "0.1.0"
description = ""
authors = ["Simeon J Morgan <smorgan@digitalfeed.net>"]

[tool.poetry.dependencies]
python = "^3.8"
tdt = "^0.3.9"
jupyter = "^1.0.0"
jupyterlab = "^2.2.5"
seaborn = "^0.10.1"
matplotlib = "^3.3.1"
pandas = "^1.1.0"
invoke = "^1.4.1"
nptyping = "^1.3.0"
openpyxl = "^3.0.5"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
flake8-builtins = "^1.5.3"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
flake8-pytest-style = "^1.3.0"
flake8-comprehensions = "^3.2.3"
pyfakefs = "^4.1.0"

[tool.black]
line-length = 120
target_version = ['py38']
exclude = '''
/(
      build
    | dist
    | _build
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
)/
'''

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = []
not_skip = ["__init__.py"]
known_standard_library = []
skip = [".venv"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

